<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppTopBar
            android:id="@+id/courseEditTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppTextInput
            android:id="@+id/inputCourseCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/hint_course_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCourseCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLines="1" />
        </io.github.mdraihan27.routinemanager.core.designsystem.components.AppTextInput>

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppTextInput
            android:id="@+id/inputCourseNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/hint_course_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </io.github.mdraihan27.routinemanager.core.designsystem.components.AppTextInput>

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppTextInput
            android:id="@+id/inputTeacherNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/hint_teacher_name">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/editTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1" />
        </io.github.mdraihan27.routinemanager.core.designsystem.components.AppTextInput>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/label_select_color"
            android:textAppearance="@style/TextAppearance.App.Primary.Subtitle" />

        <io.github.mdraihan27.routinemanager.core.designsystem.components.ColorPickerView
            android:id="@+id/courseColorPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small" />

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppButton
            android:id="@+id/btnSaveCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/action_save" />

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppButton
            android:id="@+id/btnDeleteCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/action_delete"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
