<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/dayChipsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvHolidayNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:padding="@dimen/spacing_small"
        android:text="@string/label_holiday_today"
        android:textAppearance="@style/TextAppearance.App.Secondary.Caption"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDayClasses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_weight="1"
        android:clipToPadding="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal">

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppButton
            android:id="@+id/btnAddClassToDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/title_add_class" />

        <io.github.mdraihan27.routinemanager.core.designsystem.components.AppButton
            android:id="@+id/btnDoneWizard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_done" />
    </LinearLayout>
</LinearLayout>
